@@ -83,7 +83,7 @@ if (Ti.version < 1.8) {
 	}
 	
 	//入口程序
-	var ApplicationTabGroup = require('ui/common/ApplicationTabGroupV2');
+	var ApplicationTabGroup = require('ui/common/ApplicationTabGroupV3');
 	var tabGroup = new ApplicationTabGroup();
 	
 	Ti.Geolocation.purpose = "盛隆电气想使用您的定位服务";
