@@ -34,7 +34,7 @@ tabGroupHelper.createAppTabs = function(window, welcomeWindow) {
 		}
 		
 		if(menus[i].icon == "") {
-			icon = "/images/KS_nav_ui.png";
+			icon = "/images/tabs/home.png";
 		} else {
 			icon = menus[i].icon;
 		}
