@@ -53,6 +53,9 @@
 3.重构：更新返回按钮点击区域
 4.重构：调整下拉刷新功能，更新背景
 
+[shenglong-electricv_1.0.0.1 2014-03-08 张春生]
+1.重构：调整内容加载方式，使用setHtml方法
+
 --备注分类
 1、新功能：
 2、Bug:
